# template

./: README.md  install.py  metadata.yml  pyproject.toml  setup.py
src/: __init__.py  _typing.py
src/template/: __init__.py  __main__.py  _version.py  core.py
