[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "template"
version = "0.0.0"
dependencies = []
requires-python = ">=3.12"
authors = [
  {name = "Chitaoji", email = "2360742040@qq.com"},
]
maintainers = [
  {name = "Chitaoji", email = "2360742040@qq.com"}
]
description = "A template repository for building python packages."
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
keywords = ["config"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12"
]

[project.urls]
Documentation = "https://github.com/Chitaoji/template/blob/main/README.md"
Repository = "https://github.com/Chitaoji/template/"

[project.scripts]
cfg = "template.__main__:run"